Fix broken styling on services section on mobile view

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -56,6 +56,12 @@ a{
   color: black;
 }
 
+main{
+  display: flex;
+  flex-direction: column;
+  gap: 3.25rem;
+}
+
 .section-title {
   font-size: var(--fs-h2);
   color: #FFC735;
@@ -157,7 +163,8 @@ a{
 .hero img{
   width: 100%;
   max-width: 30rem;
-  height: 38rem;
+  height: auto;
+  object-fit: contain;
 }
 
 
@@ -291,13 +298,16 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1.25rem;
+  padding: 1.25rem;
 }
 
 .akreditasi img{
   max-width: 45rem;
   width: 100%;
-  height: 25rem;
-  background-color: #cacaca23;
+  height: auto;
+  /* background-color: #cacaca23; */
+  object-fit: contain;
 }
 
 .tentang-kami{
@@ -345,16 +355,19 @@ a{
     width: 10em;
 }
 
-  .service-list {
-    flex-direction: column;
-    align-items: center;
-  }
-
   .service-card {
     width: 100%;
     max-width: 320px;
     height: 100%;
     max-height: 320px;
+  }
+
+  .akreditasi{
+    text-align: center;
+  }
+
+  .tentang-kami{
+    text-align: center;
   }
 
   .tentang-kami img {
